fix alignment

--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -407,7 +407,7 @@ a:active {
 .header-logo a {
     display: var(--header-logo-link-display);
     position: var(--header-logo-link-position);
-    align: var(--header-logo-link-left);
+    left: var(--header-logo-link-left);
     top: var(--header-logo-link-top);
 }
 .section-header {
